syntax = "proto3";
option java_multiple_files=true;
option java_generic_services = true;
package com.services.grpc.server.trainer;

message ProtoTrainer{
  string id = 1;
  string name = 2;
  int32 salary = 3;
  string sportCategory = 4;
  int32 trainingPrice = 5;
}

message Empty{
}

message TrainerResponse{
  repeated ProtoTrainer trainers=1;
}

message SportCategoryRequest{
  string sportCategory = 1;
}

message TrainerRequest{
  string name = 1;
  int32 salary = 2;
  string sportCategory=3;
  int32 carePrice = 4;
}

message IdRequest{
  string id=1;
}

service TrainerService{
  rpc showTrainers(Empty) returns (TrainerResponse);
  rpc getSuitableTrainer(SportCategoryRequest) returns(TrainerResponse);
  rpc showTrainerById(IdRequest) returns (TrainerResponse);
  rpc addTrainer(TrainerRequest) returns (TrainerResponse);
  rpc deleteTrainer(IdRequest) returns (Empty);
}